--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
     <label for="nome">Nome:</label>
     <input type="text" id="nome" name="nome" required>
 
-    <label for="telefone">Telefone (com DDD):</label>
-    <input type="tel" id="telefone" name="telefone" required pattern="\\d{10,11}">
+    <label for="telefone">Telefone (com DDD, qualquer formato):</label>
+    <input type="tel" id="telefone" name="telefone" required>
+
 
     <button type="submit">Quero Participar</button>
   </form>
